apps/base/penpot/controllers/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: penpot
  namespace: penpot
  annotations:
    external-dns.alpha.kubernetes.io/target: cluster.benwoodward.cloud.
spec:
  parentRefs:
    - name: cilium-gateway
      namespace: gateway
  hostnames:
    - penpot.benwoodward.cloud
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: penpot
          port: 8080
